Fixed issue CR-999: 5pointquestion on mobile devices rtl

--- a/themes/survey/ls6_surveytheme/css/variations/theme_green-rtl.css
+++ b/themes/survey/ls6_surveytheme/css/variations/theme_green-rtl.css
@@ -13944,6 +13944,12 @@ input.imageselect-checkbox:checked ~ .imageselect-select::after {
   border-color: #14AE5C;
 }
 
+@media screen and (max-width: 767px) {
+  .choice-5-pt-radio .list-group-horizontal {
+    flex-direction: column;
+  }
+}
+
 .checkbox-item {
   padding-right: 20px;
 }
